--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   google_nav_bar: ^5.0.6
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
