--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   google_nav_bar: ^5.0.6
   google_fonts: ^4.0.4
+  curved_navigation_bar: ^1.0.3 
 
 dev_dependencies:
   flutter_test:
